phan tao gach sang 1 class level, de tao them lvl2